<resources>
    <string name="app_name">Tariyxıy Estelikler</string>

    <string name="lifestyle">Ómiri</string>
    <string name="berdaq">Berdaq Ǵarǵabay uli</string>
    <string name="literary_creativity">Ádebiy \ndóretiwshiligi</string>
    <string name="songs">Qosiqlari</string>
    <string name="poets">Poemalari</string>
    <string name="info">Haqqimizda</string>
    <string name="main">Tiykarǵi</string>
    <string name="poet_info">Berdaq Ǵarǵabay ulı (1827 - 1900) - Qaraqalpaq klassik shayırlarınıń ishinde óziniń ómir bayanına tiyisli bazıbir dereklerdi qolı menen jazıp qaldırǵan shayır Berdaq boladı. Ol óziniń ataqlı \"Ómirim\" qosıǵında óziniń avtobiografiyasın qaldırǵan. \n<font fgcolor="#ff0000"><a href="https://youtu.be/MafYRYpNVI4">Berdaq Ǵarǵabay uli tariyxi</a></font> </string>
    <string name="childhood">Childhood</string>
    <string name="about" >Bul mobil baǵdarlama TITU NF studenti <font fgcolor="#ff0000"><a href="http://t.me/mirzabekbekbosinov00">Bekbosinov Mirzabek</a></font>  tárepinen jaratıldı. Bul mobil baǵdarlamada qaraqalpaq xalq shayırı Berdaq Ǵarǵabay ulınıń ómiri, qosıqları, poemaları menen tanısıp shıqsańız boladı. Jánede bul mobil baǵdarlamanı dúziw barısında jaqınnan járdem bergen Gúlbaxar Umarova, Eleonora Jolimbetovalarǵa óz minnetdarshılıǵımızdı bildirip qalamız</string>
    <string name="about_title">Haqqimizda</string>
    <string name="play_sound">PLAY SOUND</string>
    <string name="shilpiq">Shilpiq</string>

    <string name="description">Description</string>
    <string name="search">Izlew</string>
    <string name="not_found">Tabilmadi</string>
  
    <string name="jovobingizni_kiriting">jovobingizni kiriting</string>
    <string name="save">saqlash</string>
    <string name="continue_or">continue</string>
  
</resources>