<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <com.google.android.material.appbar.AppBarLayout
        android:id="@+id/topAppBar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <com.google.android.material.appbar.MaterialToolbar
            android:id="@+id/toolbar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/app_main_color"
            android:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar"
            app:contentInsetStartWithNavigation="0dp"
            app:layout_collapseMode="pin"
            app:theme="@style/ThemeOverlay.AppCompat"
            app:title="@string/berdaq"
            />

    </com.google.android.material.appbar.AppBarLayout>

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/horizontal_line"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.1" />

    <androidx.cardview.widget.CardView
        android:id="@+id/btnLifestyle"
        style="@style/main_item_style"
        android:layout_marginStart="@dimen/margin_standard"
        android:layout_marginEnd="@dimen/margin_middle"
        android:layout_marginBottom="@dimen/margin_middle"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/horizontal_line"
        app:layout_constraintEnd_toStartOf="@id/btnCreativity"
        app:layout_constraintBottom_toTopOf="@id/btnSongs"
        >

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <androidx.appcompat.widget.AppCompatImageView
                android:id="@+id/icon_lifestyle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingHorizontal="16dp"
                android:src="@drawable/poet"
                app:layout_constraintBottom_toTopOf="@id/title_text"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/title_text"
                style="@style/main_item_title_style"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/lifestyle"
                android:textSize="@dimen/text_size"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintTop_toBottomOf="@id/icon_lifestyle"
                tools:ignore="SpUsage" />

        </androidx.constraintlayout.widget.ConstraintLayout>

    </androidx.cardview.widget.CardView>

    <androidx.cardview.widget.CardView
        android:id="@+id/btnCreativity"
        style="@style/main_item_style"
        android:layout_marginStart="@dimen/margin_middle"
        android:layout_marginEnd="@dimen/margin_standard"
        android:layout_marginBottom="@dimen/margin_middle"
        app:layout_constraintBottom_toTopOf="@id/btnPoets"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@id/btnLifestyle"
        app:layout_constraintTop_toBottomOf="@id/horizontal_line"
        >

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@color/white">

            <androidx.appcompat.widget.AppCompatImageView
                android:id="@+id/icon_creativity"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingHorizontal="@dimen/margin_standard"
                android:src="@drawable/creativity"
                app:layout_constraintBottom_toTopOf="@id/tv_creativity"
                app:layout_constraintTop_toTopOf="parent"
                tools:layout_editor_absoluteX="0dp" />

            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/tv_creativity"
                style="@style/main_item_title_style"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/literary_creativity"
                android:textSize="@dimen/text_size"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/icon_creativity"
                tools:ignore="SpUsage" />

        </androidx.constraintlayout.widget.ConstraintLayout>

    </androidx.cardview.widget.CardView>

    <androidx.cardview.widget.CardView
        android:id="@+id/btnSongs"
        style="@style/main_item_style"
        android:layout_marginStart="@dimen/margin_standard"
        android:layout_marginTop="@dimen/margin_middle"
        android:layout_marginEnd="@dimen/margin_middle"
        android:layout_marginBottom="@dimen/margin_middle"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@id/btnPoets"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/btnLifestyle"
        >

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/bgSongs"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@color/white">

            <androidx.appcompat.widget.AppCompatImageView
                android:id="@+id/icon_songs"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingHorizontal="@dimen/padding_standard"
                android:src="@drawable/songs"
                app:layout_constraintBottom_toTopOf="@id/tv_songs"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/tv_songs"
                style="@style/main_item_title_style"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/songs"
                android:textSize="@dimen/text_size"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintTop_toBottomOf="@id/icon_songs"
                tools:ignore="SpUsage" />

        </androidx.constraintlayout.widget.ConstraintLayout>

    </androidx.cardview.widget.CardView>

    <androidx.cardview.widget.CardView
        android:id="@+id/btnPoets"
        style="@style/main_item_style"
        android:layout_marginStart="@dimen/margin_middle"
        android:layout_marginTop="@dimen/margin_middle"
        android:layout_marginEnd="@dimen/margin_standard"
        android:layout_marginBottom="@dimen/margin_middle"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@id/btnSongs"
        app:layout_constraintTop_toBottomOf="@id/btnCreativity"
        >

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <ImageView
                android:id="@+id/icon_poem"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingHorizontal="@dimen/padding_standard"
                android:src="@drawable/poems"
                app:layout_constraintBottom_toTopOf="@id/tv_poems"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/tv_poems"
                style="@style/main_item_title_style"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/poets"
                android:textSize="@dimen/text_size"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/icon_poem"
                tools:ignore="SpUsage" />

        </androidx.constraintlayout.widget.ConstraintLayout>

    </androidx.cardview.widget.CardView>

</androidx.constraintlayout.widget.ConstraintLayout>